# UDRMS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/include/: Administrator.h  Dormitory.h  DoubleRoom.h  Exceptions.h  Restaurant.h  Room.h  SharedRoom.h  SingleRoom.h  Staff.h  Student.h  SystemAdmin.h  UDRMSException.h  University.h  User.h
core/src/: Administrator.cpp  Dormitory.cpp  DoubleRoom.cpp  Exceptions.cpp  Restaurant.cpp  Room.cpp  SharedRoom.cpp  SingleRoom.cpp  Staff.cpp  Student.cpp  SystemAdmin.cpp  UDRMSException.cpp  University.cpp  User.cpp  test  test.cpp
data/: test_backup.txt
docs/: coreheadersnotes.md  coresrcnotes.md  move_constructor_explained.txt  uiheadersandsrcnotes.md
ui/include/: createuserscreen.h  dashboardscreen.h  loginscreen.h  mainwindow.h  roommanagementscreen.h  uihelpers.h
ui/src/: createuserscreen.cpp  createuserscreen.ui  dashboardscreen.cpp  dashboardscreen.ui  loginscreen.cpp  loginscreen.ui  mainwindow.cpp  roommanagementscreen.cpp  roommanagementscreen.ui
